[package]
name = "cm"
version = "0.1.0"
authors = ["rexim <reximkut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.69"
pcre2 = "0.2"
os_pipe = "0.9.2"

[dependencies.ncurses]
version = "5.99.0"
features = ["wide"]